src/test/ui/borrowck/borrowck-loan-of-static-data-issue-27616.nll.stderr
error[E0506]: cannot assign to `*s` because it is borrowed
  --> $DIR/borrowck-loan-of-static-data-issue-27616.rs:26:5
   |
LL |     let alias: &'static mut String = s;
   |                                      - borrow of `*s` occurs here
...
LL |     *s = String::new(); //~ ERROR cannot assign
   |     ^^ assignment to borrowed `*s` occurs here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
